fix: fixed an issue with the buttons caused by having hidden overflow on the carousel controls class

--- a/app/scss/_carousel.scss
+++ b/app/scss/_carousel.scss
@@ -49,14 +49,12 @@
   }
 
   &-controls {
-    border-radius: rem(28px);
     bottom: rem(-3px);
     box-shadow: rem(0px) rem(15px) rem(20px) rem(-10px) rgba(36, 36, 113, 0.0991313);
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     left: 50%;
-    overflow: hidden;
     position: absolute;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
@@ -129,4 +127,14 @@
   &:active {
     background-color: $darkBlue;
   }
+}
+
+#previous-slide {
+  border-top-left-radius: rem(28px);
+  border-bottom-left-radius: rem(28px);
+}
+
+#next-slide {
+  border-top-right-radius: rem(28px);
+  border-bottom-right-radius: rem(28px);
 }
